objects/Integration_Status__c.object
<CustomObject>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Error_Rows__c</fullName>
        <label>Error Rows</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Name__c</fullName>
        <label>Job Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Load_Status__c</fullName>
        <label>Load Status</label>
        <picklist>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rows_Loaded__c</fullName>
        <label>Rows Loaded</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Job_Completed__c</fullName>
        <label>Time Job Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Job_Started__c</fullName>
        <label>Time Job Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Rows__c</fullName>
        <label>Total Rows</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Integration Status</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Job_Name__c</columns>
        <columns>Rows_Loaded__c</columns>
        <columns>Error_Rows__c</columns>
        <columns>Total_Rows__c</columns>
        <columns>Load_Status__c</columns>
        <columns>Time_Job_Started__c</columns>
        <columns>Time_Job_Completed__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Last_3_Days</fullName>
        <columns>NAME</columns>
        <columns>Job_Name__c</columns>
        <columns>Rows_Loaded__c</columns>
        <columns>Error_Rows__c</columns>
        <columns>Total_Rows__c</columns>
        <columns>Load_Status__c</columns>
        <columns>Time_Job_Started__c</columns>
        <columns>Time_Job_Completed__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:3</value>
        </filters>
        <label>Last 3 Days</label>
    </listViews>
    <listViews>
        <fullName>Todays_Load</fullName>
        <columns>NAME</columns>
        <columns>Job_Name__c</columns>
        <columns>Rows_Loaded__c</columns>
        <columns>Error_Rows__c</columns>
        <columns>Total_Rows__c</columns>
        <columns>Load_Status__c</columns>
        <columns>Time_Job_Started__c</columns>
        <columns>Time_Job_Completed__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Todays Load</label>
    </listViews>
    <nameField>
        <displayFormat>IS-{000000000}</displayFormat>
        <label>Integration Status</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>